--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="de-DE">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="description" content="Günstige Ferienwohnung für zwei Personen (+1) im Leipziger Neuseenland. Direkt am Zwenkauer, Markleeberge und Cospudeneer See. gelegen">
+    <meta name="description" content="Günstige Ferienwohnung für zwei Personen (+1) im Leipziger Neuseenland. Direkt am Zwenkauer, Markleeberge und Cospudeneer See gelegen">
     <meta name="keywords" content="">
     <link rel="shortcut icon" href="/assets/favicon.ico">
     <meta name="robots" content="index,follow">
-    <link rel="canonical" href="">
-    <link rel="alternate" href="" hreflang="de-de">
+    <link rel="canonical" href="http://www.fewo-andi-kathrin.de/">
+    <link rel="alternate" href="http://www.fewo-andi-kathrin.de/" hreflang="de-de">
     <!-- Google Web Font -->
     <link href='https://fonts.googleapis.com/css?family=Lobster|Lato:400,300' rel='stylesheet' type='text/css'>
     <!-- jQuery -->
