--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <section>
             <p class="text-lg text-lighter">
-                Wir vermietene ine kleine Ferienwohnung für zwei Personen, in ruhiger Seelage. <br>
+                Wir vermietene eine kleine Ferienwohnung für zwei Personen in ruhiger Seelage. <br>
                 Eine Aufbettung für eine weitere Person ist dabei gerne möglich.
             </p>
         </section>
@@ -85,9 +85,10 @@
         <section>
             <h2>Ausstattung</h2>
             <p class="text-md text-lighter">
-                Die Wohnung besteht aus Küche, Bad (inklusive Wanne & Dusche),
-                Wohnraum und einem Raum zum Schlafen. Alle Zimmer sind gut ausgestatten,
-                weiter sind Verstaumöglichkeiten für Reisegepäck.
+                Die Wohnung (Grundfläche 40m²) besteht aus Küche (inklusive Cerankochfeld, Ofen, Mikrowelle, Kühlschrank mit Gefrierfach),
+                Bad (inklusive Wanne & Dusche),
+                Wohnraum mit TV-Gerät und einem Schlafraum mit Doppelbett. <br>
+                Alle Zimmer sind gut ausgestattet, weiter sind Verstaumöglichkeiten für Reisegepäck vorhanden.
             </p>
 
             <div id="carousel-interior" class="carousel slide" data-ride="carousel">
@@ -160,7 +161,7 @@
             <p class="text-md text-lighter">
                 In nur wenigen Gehminuten sind Sie am Zwenkauer See,
                 der viele Möglichkeiten der Freizeitgesteltung bietet.<br>
-                Badestrand, Bootsverleih, Fahrgeschäft und verschiedene
+                Badestrand, Bootsverleih, Schiffrundfahrt und verschiedene
                 Restaurants.
             </p>
             <div class="row">
@@ -168,10 +169,7 @@
                     <iframe height="350"
                             frameborder="0"
                             style="border:0" src="https://www.google.de/maps/embed/v1/place?q=Grafstra%C3%9Fe%208&key=AIzaSyCWn1IFkjmPZT2rCKeOF300DHoWGVAVsLk&maptype=satellite&zoom=14" allowfullscreen></iframe>
-                    <p class="text-md text-lighter">
-                        Zwenkau ist günstig gelegen, so ist es ein Vergnügen die Umgebung
-                        mit dem Fahrrad oder dem Auto zu erkunden.
-                    </p>
+
                 </div>
                 <div class="col-sm-4">
                     <address class="text-md text-lighter">
@@ -186,6 +184,16 @@
                     </p>
                 </div>
             </div>
+            <p class="text-md text-lighter">
+                Zwenkau ist günstig gelegen, so ist es ein Vergnügen die Umgebung
+                mit dem Fahrrad oder dem Auto zu erkunden. <br>
+                In nur 20 Fahrminuten erreichen Sie Leipzig oder den Vergnügungspark Belantis.
+            </p>
+            <p class="text-md text-lighter">
+                Als Teil des Neuseenlandes befindet sich Zwenkau auch in unmittelbarer Umgebung weiterer Seen,
+                zum Beispiel dem Markkleeberger See mit der Wildwasser-Rafting-Anlage oder dem Cospudener See
+                mit Bootsverleih und Sauna am See.
+            </p>
         </section>
 
         <hr>
@@ -211,6 +219,7 @@
                     <p class="text-md text-lighter">
                         <strong>FeWo für 2 Personen</strong><br>
                         € 45,-  pro Tag<br>
+                        + € 10,-  Aufbettung<br>
                         + € 30,-  Endreinigung
                     </p>
 
