--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <section>
             <p class="text-lg text-lighter">
-                Wir vermietene eine kleine Ferienwohnung für zwei Personen in ruhiger Seelage. <br>
+                Wir vermieten eine kleine Ferienwohnung für zwei Personen in ruhiger Seelage. <br>
                 Eine Aufbettung für eine weitere Person ist dabei gerne möglich.
             </p>
         </section>
