--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
                 <div class="col-sm-4">
                     <address class="text-md text-lighter">
-                        <strong>Fam. Andreas u. Kahtrin Günther</strong><br>
+                        <strong>Fam. Andreas u. Kathrin Günther</strong><br>
                         Grafstraße 8<br>
                         04442 Zwenkau<br>
                     </address>
@@ -238,13 +238,13 @@
 
         <h4>Angaben gemäß § 5 TMG</h4>
         <address>
-            <strong>Fam. Andreas u. Kahtrin Günther</strong><br>
+            <strong>Fam. Andreas u. Kathrin Günther</strong><br>
             Grafstraße 8<br>
             04442 Zwenkau<br>
         </address>
 
         <h4>Vertreten durch</h4>
-        <p>Kahtrin Günther</p>
+        <p>Kathrin Günther</p>
 
         <h4>Kontakt</h4>
         <p>
