--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <div class="col-sm-8">
                     <h2>Buchung</h2>
                     <p class="text-md text-lighter">
-                        Gefällt Ihnen unseren Ferienwohnung? Oder haben Sie noch Fragen?<br>
+                        Gefällt Ihnen unsere Ferienwohnung? Oder haben Sie noch Fragen?<br>
                         Dann kontaktieren Sie uns gerne via E-Mail oder Telefon und wir helfen Ihnen weiter.
                     </p>
                     <p class="text-md text-lighter">
@@ -220,7 +220,7 @@
                         <strong>FeWo für 2 Personen</strong><br>
                         € 45,-  pro Tag<br>
                         + € 10,-  Aufbettung<br>
-                        + € 30,-  Endreinigung
+                        + € 15,-  Endreinigung
                     </p>
 
                     <p class="text-md text-lighter">
