--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="de-DE">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta name="description" content="Günstige Ferienwohnung für zwei Personen (+1) im Leipziger Neuseenland. Direkt am Zwenkauer, Markleeberger und Cospudeneer See gelegen">
+    <meta name="description" content="Günstige Ferienwohnung für zwei Personen (+1) im Leipziger Neuseenland. Direkt am Zwenkauer, Markleeberger und Cospudener See gelegen">
     <meta name="keywords" content="">
     <link rel="shortcut icon" href="/assets/favicon.ico">
     <meta name="robots" content="index,follow">
